<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.goostree.simpletipcalculator.AddActivity$AddFragment" >

    <LinearLayout
        android:id="@+id/date_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="setDate"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/date_text"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/date_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/date_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/date_edit_text"
            android:onClick="setDate"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/hours_worked_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/date_layout"
        android:layout_below="@id/date_layout"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/hours_worked_text"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="@string/hours_worked_text"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/hours_worked_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:digits="0123456789."
            android:gravity="center"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:paddingTop="15dp" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/gross_tips_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/date_layout"
        android:layout_below="@id/hours_worked_layout"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/gross_tips_text"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="@string/gross_tips_text"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/gross_tips_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:digits="0123456789."
            android:gravity="center"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:paddingTop="15dp" >
        </EditText>
    </LinearLayout>

    <TextView
        android:id="@+id/add_tip_tipee"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/gross_tips_layout"
        android:paddingTop="15dp"
        android:text="@string/add_tipee_text"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/view_scroller"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_tip_tipee"
        android:layout_marginBottom="90dp" >

        <RelativeLayout
            android:id="@+id/add_page_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/plus_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@android:color/transparent"
                android:onClick="addTipee"
                android:text="@string/plus_text"
                android:textStyle="bold" />

            <Button
                android:id="@+id/minus_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:background="@android:color/transparent"
                android:onClick="removeTipee"
                android:text="@string/minus_text"
                android:textStyle="bold"
                android:visibility="gone" />
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/save_new_tip_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:onClick="saveTip"
        android:text="@string/save_new_tip"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/net_tips_label"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/save_new_tip_button"
        android:layout_alignLeft="@+id/save_new_tip_button"
        android:paddingBottom="15dp"
        android:text="@string/net_tips_label"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/net_tips_display"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/net_tips_label"
        android:layout_alignBottom="@+id/net_tips_label"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/zero_point_zero"
        android:textStyle="bold" />

</RelativeLayout>