<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/edit_date"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:text="@string/date_text"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/edit_date_content"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/edit_date"
        android:layout_toRightOf="@id/edit_date"
        android:gravity="center" />

    <TextView
        android:id="@+id/edit_hours_worked"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_date_content"
        android:paddingTop="15dp"
        android:text="@string/hours_worked_text"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_hours_worked_content"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/edit_hours_worked"
        android:layout_toRightOf="@id/edit_hours_worked"
        android:gravity="center"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/edit_gross_tips"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_hours_worked"
        android:paddingTop="15dp"
        android:text="@string/gross_tips_text"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_gross_tips_content"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/edit_gross_tips"
        android:layout_toRightOf="@id/edit_gross_tips"
        android:gravity="center"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/edit_tipouts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_gross_tips"
        android:paddingTop="15dp"
        android:text="@string/add_tipee_text"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/edit_tip_scroller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_tipouts"
        android:layout_marginBottom="45dp" >

        <RelativeLayout
            android:id="@+id/edit_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/edit_plus_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@android:color/transparent"
                android:onClick="addTipout"
                android:text="@string/plus_text"
                android:textStyle="bold" />
        </RelativeLayout>
    </ScrollView>

    <TextView
        android:id="@+id/empty_space"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/edit_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/empty_space"
        android:background="@android:color/transparent"
        android:onClick="saveTip"
        android:text="@string/save_button"
        android:textStyle="bold" />

    <Button
        android:id="@+id/edit_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="20dp"
        android:layout_toLeftOf="@+id/empty_space"
        android:background="@android:color/transparent"
        android:onClick="delete"
        android:text="@string/delete_button"
        android:textStyle="bold" />

</RelativeLayout>