<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_scroller"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
 	android:paddingLeft="@dimen/activity_horizontal_margin"
   	android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.goostree.simpletipcalculator.ViewTipActivity$PlaceholderFragment"  >
        
        <RelativeLayout
            android:id="@+id/view_detail_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
    
        <TextView
	        android:id="@+id/view_date_range"
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"
	        android:textStyle="bold"
	        android:text="@string/date_range_text" />
        
        <TextView
	        android:id="@+id/view_date_range_content"
	        android:layout_width="170dp" 
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@id/view_date_range"
	        android:layout_centerHorizontal="true"
	        android:gravity="center" />
        
        <TextView
	        android:id="@+id/view_wages"
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"
	        android:layout_below="@id/view_date_range"
	        android:paddingTop="15dp"
	        android:textStyle="bold"
	        android:text="@string/wages" />
	    
	    <TextView
	        android:id="@+id/view_wages_content"
	        android:layout_width="140dp" 
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@id/view_wages"
	        android:layout_centerHorizontal="true"
	        android:gravity="center"
	        android:visibility="gone"/>
        
	    <TextView
	        android:id="@+id/view_gross_tips"
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"
	        android:layout_below="@id/view_wages"
	        android:paddingTop="15dp"
	        android:textStyle="bold"
	        android:text="@string/gross_tips_text" />
	    
	    <TextView
	        android:id="@+id/view_gross_tips_content"
	        android:layout_width="140dp" 
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@id/view_gross_tips"
	        android:layout_centerHorizontal="true"
	        android:gravity="center"
	        android:visibility="gone"/>
	        
	    
	    <TextView
	        android:id="@+id/view_tipouts"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/view_gross_tips"
	        android:paddingTop="15dp"
	        android:textStyle="bold" 
	        android:text="@string/add_tipee_text" />
	    
	    <TextView
	        android:id="@+id/view_tipouts_content"
	        android:layout_width="140dp" 
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@id/view_tipouts"
	        android:layout_centerHorizontal="true"
	        android:gravity="center"
	        android:visibility="gone" />
	    
	    <TextView
	        android:id="@+id/view_net_tips"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/view_tipouts"
	        android:paddingTop="15dp"
	        android:textStyle="bold" 
	        android:text="@string/net_tips_label" />
	    
	    <TextView
	        android:id="@+id/view_net_tips_content"
	        android:layout_width="140dp" 
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@id/view_net_tips"
	        android:layout_centerHorizontal="true"
	        android:gravity="center"
	        android:visibility="gone" />
	    
	    <TextView
	        android:id="@+id/view_earnings"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/view_net_tips"
	        android:paddingTop="15dp"
	        android:textStyle="bold" 
	        android:text="@string/earnings" />
	    
	    <TextView
	        android:id="@+id/view_earnings_content"
	        android:layout_width="140dp" 
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@id/view_earnings"
	        android:layout_centerHorizontal="true"
	        android:gravity="center"
	        android:visibility="gone" />
	    
	    <TextView
	        android:id="@+id/tipout0"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/view_earnings"
	        android:paddingTop="15dp"
	        android:textStyle="bold" 
	        android:text="@string/tipout_details" />	    
	    
	    
	    </RelativeLayout>
	    
</ScrollView>

	   
   
